syntax = "proto3";

option csharp_namespace = "ProductOfferGrpcService.Protos";

service ProductOfferService {
	rpc GetOfferList (Empty) returns (Offers);
	rpc GetOffer (GetOfferDetailRequest) returns (OfferDetail);
	rpc CreateOffer (CreateOfferDetailRequest) returns (OfferDetail);
	rpc UpdateOffer (UpdateOfferDetailRequest) returns (OfferDetail);
	rpc DeleteOffer (DeleteOfferDetailRequest) returns (DeleteOfferDetailResponse);
}

message GetOfferDetailRequest {
	int32 productId = 1;
}

message OfferDetail {
	int32 id = 1;
	string productName = 2;
	string offerDescription = 3;
}

message CreateOfferDetailRequest {
	OfferDetail offer = 1;
}

message UpdateOfferDetailRequest {
	OfferDetail offer = 1;
}

message DeleteOfferDetailRequest {
	int32 productId = 1;
}

message DeleteOfferDetailResponse {
	bool isDelete = 1;
}

message Empty{

}

message Offers {
  repeated OfferDetail items = 1;
}